--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "homepage": "https://github.com/moodiseo/wetube-reloaded#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
